--- a/index.html
+++ b/index.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>To-Do List</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-</head>
-<body>
-    <div class="container">
-        <h1>To-Do List</h1>
-        <input type="text" id="taskInput" placeholder="Enter a task">
-        <button id="addTask">Add Task</button>
-        <ul id="taskList"></ul>
-    </div>
+<html>
 
-    <script src="app.js"></script>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>To Do List</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <link href="index.css" rel="stylesheet" type="text/css" />
+  <script src="index.js"></script>
+</head>
+
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <h2>To Do List</h2>
+        <div id='todo-list'>
+        </div>
+        <form id="create-task">
+          <input id="new-task-content" type="text" placeholder="new task" required />
+          <button>Create</button>
+        </form>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
